make sure javadoc sees jmf.jar
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1807 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -228,7 +228,7 @@
       description="Generates project javadoc.">
         <javadoc author="true" destdir="${java.doc}" package="true"
             version="true" use="true" windowtitle="SIP Communicator API"
-            classpathref="project.class.path" source="1.4+">
+            classpathref="compile.class.path" source="1.4+">
             <fileset dir="${src}"/>
             <tag name="todo" description="To do:"/>
         </javadoc>
