--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -2,22 +2,19 @@
 # environment when running automated testing.
 
 # A list of all tests that should be run by the test target of the project.
-#net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
-# MetaContactListServiceLick \
-# SipProtocolProviderServiceLick \
-# NetworkAddressManagerServiceLick \
-# FileAccessServiceLick \
-# HistoryServiceLick \
-# SlicklessTests \
-# MsgHistoryServiceLick \
-# CallHistoryServiceLick \
-# JabberProtocolProviderSlick \
-# IcqProtocolProviderSlick
+net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
+ MetaContactListServiceLick \
+ SipProtocolProviderServiceLick \
+ NetworkAddressManagerServiceLick \
+ FileAccessServiceLick \
+ HistoryServiceLick \
+ SlicklessTests \
+ MsgHistoryServiceLick \
+ CallHistoryServiceLick \
+ JabberProtocolProviderSlick \
+ IcqProtocolProviderSlick
 
 # MediaServiceLick \
-
-net.java.sip.communicator.slick.runner.TEST_LIST=MsgHistoryServiceLick
-
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
