Updated Debian package: * OSGI implementation changed from Oscar to Felix:   - Bundle are now deployed by reference in ~/.felix/sip-communicator.bin   - Updated libs accordingly * Dependancy added on alsa-oss so JMF can now use Alsa * Removed Junit in Recommand section, because it is not relevant for the user
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1826 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/control
+++ b/resources/install/debian/control
@@ -7,8 +7,7 @@ Standards-Version: 3.7.2
 
 Package: sip-communicator
 Architecture: i386
-Depends: java-virtual-machine, java2-runtime, libbcprov-java, liblog4j1.2-java, libxalan2-java
-Recommends: junit
+Depends: java-virtual-machine, java2-runtime, libbcprov-java, liblog4j1.2-java, libxalan2-java, alsa-oss
 Description: the Java VoIP and Instant Messaging client
  SIP Communicator is an application that allows you to do audio/video
  conversations over the Internet through the SIP protocol, as well as chat with
