syntax errors from last commit
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1831 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
     <property name="release.src" value="${release}/install"/>
     <property name="resources" value="resources"/>
     <property name="inst.resrc" value="${resources}/install"/>
-    <condition property="path" id="" value="${basedir}/${lib}/native/windows:${system.PATH}"/>
+    <property name="path" value="${basedir}/${lib}/native/windows:${system.PATH}"/>
 
     <!-- Put here the release directory -->
     <property name="macosx.app.dir" value="${release}/macosx"/>
