Removed unneeded libs when building macosx package
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1832 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -307,9 +307,12 @@
 
         <jarfileset dir=".">
           <include name="${lib}/*.jar" />
+          <exclude name="${lib}/junit.jar" />
           <include name="${lib}/bundle/*.jar" />
+          <exclude name="${lib}/bundle/junit.jar" />
           <include name="${jmf.home}/*.jar" />
           <include name="${bundles.dest}/*.jar" />
+          <exclude name="${bundles.dest}/*-slick.jar" />
         </jarfileset>
         <javafilelist dir="${lib}"
                       files="logging.properties, felix.client.run.properties"/>
