--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -51,6 +51,8 @@ felix.auto.start.2= \
 
 felix.auto.start.3= \
  reference:file:sc-bundles/configuration.jar \
+ reference:file:sc-bundles/version.jar \
+ reference:file:sc-bundles/version-impl.jar \
  reference:file:sc-bundles/fileaccess.jar \
  reference:file:sc-bundles/protocol.jar \
  reference:file:sc-bundles/contactlist.jar \
