include the version service and implementation jars in the test cache repository.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1869 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -44,6 +44,8 @@ felix.auto.start.2= \
 
 felix.auto.start.3= \
  file:sc-bundles/configuration.jar \
+ reference:file:sc-bundles/version.jar \
+ reference:file:sc-bundles/version-impl.jar \
  file:sc-bundles/netaddr.jar
 
 felix.auto.start.4= \
