adding a safeguard shutdown bundle that would leave SIP Communicator 15 seconds to die and, if this doesn't happen, kill it itself
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1884 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1063,4 +1063,14 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/slick/version"/>
         </jar>
     </target>
+
+    <!-- BUNDLE-SHUTDOWN -->
+    <target name="bundle-shutdown">
+        <!-- Creates a bundle for the shutdown plugin.-->
+        <jar compress="false" destfile="${bundles.dest}/shutdown.jar"
+            manifest="src/net/java/sip/communicator/slick/shutdown/shutdown.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/shutdown"
+                prefix="net/java/sip/communicator/impl/shutdown"/>
+        </jar>
+    </target>
 </project>
