add stun4j to the netaddr bundle
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1895 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -796,6 +796,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/service/netaddr"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/netaddr"
                 prefix="net/java/sip/communicator/impl/netaddr"/>
+            <zipfileset src="${lib}/Stun4J.jar" prefix=""/>
         </jar>
     </target>
 
