In the debian package removed jmf.jar and added BrowserLauncher2
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1898 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -47,8 +47,8 @@ install: build
 	cp debian/sip-communicator.desktop debian/sip-communicator/usr/share/applications/
 	cp $(BASEDIR)/lib/kxml-min.jar debian/sip-communicator/usr/share/sip-communicator/lib
 	cp $(BASEDIR)/lib/felix.jar debian/sip-communicator/usr/share/sip-communicator/lib
+	cp $(BASEDIR)/lib/BrowserLauncher2.jar debian/sip-communicator/usr/share/sip-communicator/lib
 	cp $(BASEDIR)/lib/servicebinder.jar debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/jmf-lin/jmf.jar debian/sip-communicator/usr/share/sip-communicator/lib
 	cp $(BASEDIR)/resources/install/logging.properties debian/sip-communicator/usr/share/sip-communicator/lib
 	cp $(BASEDIR)/lib/felix.client.run.properties debian/sip-communicator/usr/share/sip-communicator/lib
 	cp -r $(BASEDIR)/lib/native/linux debian/sip-communicator/usr/share/sip-communicator/lib/native
