--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -73,7 +73,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/icqaccregwizz.jar \
  reference:file:sc-bundles/sipaccregwizz.jar \
  reference:file:sc-bundles/jabberaccregwizz.jar \
- reference:file:sc-bundles/msnaccregwizz.jar
+ reference:file:sc-bundles/msnaccregwizz.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
