--- a/build.xml
+++ b/build.xml
@@ -608,7 +608,7 @@
         bundle-contactlist,meta-contactlist,meta-contactlist-slick,
         bundle-plugin-icqaccregwizz,bundle-plugin-jabberaccregwizz,
         bundle-plugin-msnaccregwizz,bundle-plugin-sipaccregwizz,
-        bundle-version,bundle-version-impl"/>
+        bundle-version,bundle-version-impl,bundle-shutdown"/>
 
     <!--BUNDLE-HISTORY-->
     <target name="bundle-history">
@@ -1069,7 +1069,7 @@ javax.swing.event, javax.swing.border"/>
     <target name="bundle-shutdown">
         <!-- Creates a bundle for the shutdown plugin.-->
         <jar compress="false" destfile="${bundles.dest}/shutdown.jar"
-            manifest="src/net/java/sip/communicator/slick/shutdown/shutdown.manifest.mf">
+            manifest="src/net/java/sip/communicator/impl/shutdown/shutdown.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/shutdown"
                 prefix="net/java/sip/communicator/impl/shutdown"/>
         </jar>
